# iai-callgrind

./: .clippy.toml  .editorconfig  .gitignore  .graphifyignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Justfile  README.md  VISION.md  deny.toml  lcov.bench.info  lcov.debug.info  rustfmt.toml
.bumpversion/: gungraun-macros.toml  msrv.toml  summary-schema.toml  valgrind-requests.toml  version.toml
.dicts/: custom.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: basic.yml  cicd.yml  common.yml  freebsd.yml  linux.yml  macos.yml  publish.yml  publish_book.yml  publish_gungraun_macros.yml  publish_gungraun_summary.yml  publish_valgrind_requests.yml  release.yml  valgrind_requests.yml
benchmark-tests/: Cargo.toml  DEVELOPERS.md  valgrind-suppressions.supp
benchmark-tests/benches/guide/: lib_bench_dhat.rs  lib_bench_find_primes.rs  lib_bench_iter.rs  lib_bench_regression.rs  lib_bench_subprocess.rs  lib_bench_threads.rs  lib_bench_tolerance.rs
benchmark-tests/src/: assert.rs  bench.rs  common.rs  lib.rs
benchmark-tests/src/helper/: bench-bin-fake.rs  bubble-sort.rs  cat.rs  client-requests.rs  delay.rs  echo.rs  env.rs  exit-with.rs  file-exists.rs  leak-memory.rs  pipe.rs  read-file.rs  sort.rs  subprocess.rs  thread.rs  timeout.rs
benchmark-tests/tests/: main.rs
benchmark-tests/tests/test_callgrind/: test_flamegraph_parser.rs  test_hashmap_parser.rs  test_summary_parser.rs
benchmark-tests/tests/test_dhat/: mod.rs  test_dhat_tree.rs  test_json_parser.rs  test_serde.rs
benchmark-tests/tests/test_path/: mod.rs  test_tool_output_path.rs
benchmark-tests/tests/test_tasks/: mod.rs  (+1 more)
client-request-tests/: Cargo.toml  Cross.toml  README.md  build.rs
client-request-tests/src/: lib.rs
client-request-tests/tests/common/: mod.rs
client-request-tests/tests/fixtures/: memcheck-reqs-test.illumos.stderr  memcheck-reqs-test.macos.stderr  valgrind-reqs-test.aarch64-macos.stderr  valgrind-reqs-test.illumos.stderr  valgrind-reqs-test.x86_64-macos.stderr
client-request-tests/tests/test_client_requests/: cachegrind.rs  callgrind.rs  memcheck.rs  print_macros.rs  valgrind.rs
docker/: Dockerfile  build_custom_image.sh  build_valgrind.sh  linux-image.sh  prepare_valgrind.sh
docs/: book.toml
docs/book/: versions.js
docs/src/: SUMMARY.md  best_practices.md  cachegrind.md  client_requests.md  dhat.md  flamegraphs.md  getting_help.md  intro.md  regressions.md  tools.md
docs/theme/: index.hbs
gungraun/: Cargo.toml  build.rs
gungraun-macros/: Cargo.toml  README.md
gungraun-macros/src/: bin_bench.rs  common.rs  derive_macros.rs  lib.rs  lib_bench.rs
gungraun-runner/: Cargo.toml  README.md  schemas
gungraun-runner/fixtures/: api.rs  mod.rs
gungraun-runner/schemas/: summary.v6.schema.json
gungraun-runner/src/: api.rs  error.rs  lib.rs  main.rs  serde.rs  util.rs
gungraun-runner/tests/: tests.rs
gungraun-summary/: CHANGELOG.md  Cargo.toml  README.md
gungraun-summary/schemas/: summary.v6.schema.json
gungraun-summary/src/: error.rs  lib.rs  main.rs  util.rs  v6.rs
gungraun-summary/tests/: main.rs
gungraun/src/: bin_bench.rs  common.rs  lib.rs  lib_bench.rs  macros.rs
gungraun/tests/: ui_tests.rs
gungraun/valgrind/: wrapper.h
hooks/: pre-commit  pre-push
schema-gen/: Cargo.toml  README.md
schema-gen/src/: main.rs
scripts/: extract_release_notes.py  freebsd_build_and_test.sh  freebsd_print_info.sh  install_valgrind.sh
valgrind-requests/: CHANGELOG.md  Cargo.toml  README.md  build.rs
valgrind-requests/src/: cachegrind.rs  callgrind.rs  dhat.rs  drd.rs  error.rs  helgrind.rs  lib.rs  memcheck.rs  native_bindings.rs  valgrind.rs
valgrind-requests/valgrind/: wrapper.h
(+516 files in other folders)
