# spell-checker: ignore polonius
[workspace]
members = [
  "gungraun",
  "gungraun-runner",
  "gungraun-macros",
  "valgrind-requests",
  "benchmark-tests",
  "client-request-tests",
  "schema-gen",
]
resolver = "3"

[workspace.package]
categories = ["development-tools::profiling", "development-tools::testing"]
edition = "2024"
homepage = "https://github.com/gungraun/gungraun"
keywords = ["performance", "benchmark", "profiling", "valgrind", "callgrind"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/gungraun/gungraun"
rust-version = "1.85.1"
version = "0.19.2"

[workspace.dependencies]
anyhow = { version = "1.0.46" }
assert_cmd = { version = "2.0" }
bincode-next = { version = "2", default-features = false, features = [
  "serde",
  "std",
] }
bindgen = { version = ">=0.69, <0.73" }
bon = { version = "3.9" }
cargo_metadata = { version = "0.20" }
cc = { version = "1.0.100" }
cfg-if = { version = "1" }
clap = { version = "4.0.12", features = ["derive", "env"] }
colored = { version = ">=2.2, <4" }
crossbeam = { version = "0.8" }
cty = { version = "0.2" }
derive_more = { version = ">=0.99, <3", default-features = false }
either-or-both = { version = "0.3" }
env_logger = { version = ">=0.7, <0.12" }
fs_extra = { version = "1.3" }
glob = { version = "0.3" }
indexmap = { version = "2.2.3", features = ["serde"] }
inferno = { version = "0.12", default-features = false, features = [
  'multithreaded',
] }
itertools = { version = "0.15" }
log = { version = "0.4.8" }
minijinja = { version = "2.0.1" }
nix = { version = "0.31" }
num_cpus = { version = "1" }
once_cell = { version = "1" }
os_str_bytes = { version = "7" }
parking_lot = { version = "0.12" }
polonius-the-crab = { version = "0.5" }
predicates = { version = "3" }
pretty_assertions = "1.1"
proc-macro-error3 = "3.0.0"
proc-macro2 = "1.0.88"
quote = "1.0.35"
regex = { version = "1.12" }
rstest = { version = ">=0.17, <0.27", default-features = false }
rustc_version = { version = "0.4" }
sanitize-filename = { version = "0.6" }
schemars = { version = "1.0.4" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.127" }
serde_test = { version = "1.0.177" }
serde_yaml = { version = "0.9" }
serial_test = { version = "3" }
shlex = { version = "2.0" }
signal-hook = { version = "0.4" }
simplematch = "0.3"
strum = { version = "0.28" }
syn = { version = "2.0.87", features = ["full", "extra-traits"] }
tempfile = { version = "3.10.0" }
trybuild = "1.0.18"
valico = { version = "4" }
version-compare = { version = "0.2" }
which = { version = ">=5, <9" }
