[package]
authors = ["Joining7943 <joining@posteo.de>"]
categories.workspace = true
description = "Tests for gungraun client requests"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "client-request-tests"
publish = false
readme = "../README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[build-dependencies]
fs_extra = { workspace = true }

[features]
_act = ["valgrind-requests/act"]
_stubs = ["valgrind-requests/stubs"]
default = ["_stubs"]

[dependencies]
cty = { workspace = true }
regex = { workspace = true }
shlex = { workspace = true }
valgrind-requests = { path = "../valgrind-requests", default-features = false, features = [
  "stubs",
] }
which = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
fs_extra = { workspace = true }
predicates = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
valgrind-requests = { path = "../valgrind-requests" }
version-compare = { workspace = true }
